overflow mobile fix

--- a/styles/ProfilePanels.module.scss
+++ b/styles/ProfilePanels.module.scss
@@ -155,6 +155,7 @@
                 font-family: $font-family;
                 font-size: 14px;
                 line-height: 18px;
+                overflow-wrap: anywhere;
             }
         }
         .fcTextarea,
