--- a/styles/variable.scss
+++ b/styles/variable.scss
@@ -3,7 +3,7 @@ $theme-color: #2CBEFF;
 $secondary-color:#FBD501;
 $font-family: 'system-ui';
 $border-radius: 50px;
-$white-color: #fff;
+$white-color: #ffffff;
 $black-color: #333C46;
 $text-color: #96AABE;
 $theme-custom-color: #151515;
